Stretch. Add save movie and clear saved movies function.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -67,6 +67,13 @@ body {
 }
 
 .home-button {
-  padding: 5px 10px;
+  padding: 6px 10px;
   background-color: lightskyblue;
+  border: none;
+  font-size: inherit;
+}
+
+a, Link {
+  text-decoration: none;
+  color: inherit;
 }
