Normalize movie card width.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,6 +21,11 @@ body {
   font-size: 0.8rem;
 }
 
+.movie-list-container {
+  width: 75%;
+  margin: 0 auto;
+}
+
 .saved-list {
   background-color: #fff;
   border: 0;
