--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,6 +60,13 @@ body {
   border: 1px solid lightseagreen;
   border-radius: 4px;
 }
+
+.saved-movie:hover {
+  background: white;
+  color: lightseagreen;
+  border-color: lightseagreen;
+}
+
 .saved-active {
   color: blue;
   border: 1px solid grey;
@@ -70,17 +77,18 @@ body {
   width: 75%;
   margin: 1rem auto;
 }
-.save-button {
+#save-button {
   position: absolute;
   top: 25px;
   right: 25px;
-  border: 1px solid grey;
+  border: 1px solid lightseagreen;
   padding: 5px 10px;
   background-color: lightseagreen;
 }
-.save-button:hover {
-  background-color: green;
-  color: white;
+#save-button:hover {
+  background-color: rgb(199, 233, 199);
+  color: rgb(58, 177, 58);
+  border-color: rgb(58, 177, 58);
   cursor: pointer;
 }
 
